// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown API Test menu is Array 1`] = `
<Dropdown
  menu={Array []}
>
  <button
    className="kd-dropdown-trigger"
    type="button"
  >
    button
  </button>
</Dropdown>
`;

exports[`Dropdown renders correctly 1`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 2`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="top"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 3`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="left"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 4`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="right"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 5`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="bottom"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 6`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="topLeft"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 7`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="topRight"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 8`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="bottomLeft"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 9`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="bottomRight"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 10`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="leftTop"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 11`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="leftBottom"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 12`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="rightTop"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 13`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  placement="rightBottom"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 14`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  trigger={
    Array [
      "hover",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 15`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  trigger={
    Array [
      "focus",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 16`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  trigger={
    Array [
      "click",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 17`] = `
<Dropdown
  menu={
    <DropdownMenu>
      <DropdownMenuItem>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </DropdownMenuItem>
      <DropdownMenuItem
        danger={true}
      >
        a danger item
      </DropdownMenuItem>
    </DropdownMenu>
  }
  trigger={
    Array [
      "contextMenu",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;
